<resources>
    <string name="app_name">WorldChampionship</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="login_str">Электронная почта или телефон</string>
    <string name="empty_field_error">Поле не может быть пустым</string>
    <string name="password_match_error">Пароли не совпадают</string>
    <string name="registr">Зарегистрироваться</string>
    <string name="user_name">Имя пользователя</string>
    <string name="i_am_admin">Я администратор</string>
    <string name="schedule">Расписание матчей</string>
    <string name="exit">Выход</string>
    <string name="empty_list">Список пуст</string>
    <string name="team">Команда</string>
    <string name="team_one">Команда 1</string>
    <string name="team_two">Команда 2</string>
    <string name="time_not_send">Не задано</string>
    <string name="time_data">Дата и время:</string>
    <string name="group">Группа</string>
    <string name="score">Счёт</string>
    <string name="scores">Очки</string>
    <string name="save">Сохранить</string>
    <string name="games">Игры</string>
    <string name="wins">Выигрыши</string>
    <string name="draws">Ничьи</string>
    <string name="loses">Проигрыши</string>
    <string name="goals">Забитые голы</string>
    <string name="goals_misses">Пропущенные голы</string>
    <string name="tournament">Турнирная сетка</string>
    <string name="groupA">Группа A</string>
    <string name="groupB">Группа B</string>
    <string name="groupC">Группа C</string>
    <string name="groupD">Группа D</string>
    <string name="groupE">Группа E</string>
    <string name="groupF">Группа F</string>
    <string name="groupDefault">Группа неопознана</string>
</resources>